# crypto-trading-research

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CCXT_INTEGRATION_COMPLETE.md  CCXT_SETUP_QUICK_START.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Dockerfile.frontend  EXCHANGE_MIGRATION_GUIDE.md  LICENSE  MIGRATION_CHECKLIST.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  NOTICE  PHASE3_COMPLETION_GUIDE.md  README.md  SECURITY.md  SETUP_WIZARD_UPDATED.md  TRADEMARK.md  docker-compose.yml  pyproject.toml  setup.sh  start_all.bat  start_all.ps1  start_all.sh  watchdog.ps1
.github/: PULL_REQUEST_TEMPLATE.md
axiom/: __init__.py  __main__.py  ai.py  ai_dropzone_sessions.py  api.py  api_core.py  api_security.py  asset_constants.py  assistant_context.py  assistant_db.py  assistant_session.py  async_utils.py  auto_trim.py  backtesting.py  billing_guard.py  binance_vision.py  bot.py  brain.py  brain_decisions.py  brain_inject.py  brain_lessons.py  brain_memory.py  circuit_breaker.py  cli.py  codex_responses.py  config.py  context.py  correlation.py  cost_pricing.py  crucible_discovery.py  crucible_planner.py  crucible_tasks.py  crucibles.py  daemon.py  data.py  data_availability.py  data_manager.py  db.py  deepdive_db.py  deepdive_session.py  (+84 more)
docs/: ARCHITECTURE.md  CCXT_INTEGRATION.md  EXCHANGE_CHOICE_GUIDE.md  FIRST_RUN_CHECKLIST.md  GITHUB_WEBHOOK_SETUP.md  README.md  SETUP_WIZARD_GUIDE.md  USER_MANUAL.md  container-reset-runbook.md  hyperliquid-restart-recovery-checklist.md  hypothesis-discipline-runbook.md  hypothesis-first-hardening-checklist.md  mcp-server.md  research-sources.md
examples/: ccxt_with_mock.py
forven/: ai.py  api.py  api_core.py  api_security.py  bot.py  brain.py  cli.py  context.py  crucible_tasks.py  daemon.py  data_manager.py  db.py  health_monitor.py  hypothesis_verdict.py  lan_enricher.py  model_routing.py  model_selection.py  policy.py  provider_runtime_health.py  quant_skills_extractor.py  recall.py  research_context.py  runtime_worker.py  scanner.py  scheduler.py  selfheal.py  soak.py  strategy_extrapolation.py  strategy_lifecycle.py
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
scripts/: backend_soak_report.py  backfill_btc.py  backfill_gate_passrates.py  backfill_top5.py  complete_gauntlet_s03090.py  complete_gauntlet_s03093.py  complete_gauntlet_s03096.py  complete_gauntlet_s03096_eth_engulfing.py  complete_gauntlet_s03097.py  complete_gauntlet_s03098.py  complete_gauntlet_s03099.py  complete_gauntlet_s03159.py  data_manager.py  debug_wfa.py  migrate_juddex_home.py  polygon_bulk_download.py  recover_agent_roles.py  recovery_pass.py  register_hypothesis_jobs.py  reset_pipeline_config_to_launch.py  reset_strategy_containers.py  run_gauntlet_s03097.py  run_paper_trades_test.py  run_seed_backtests.py  run_seed_variants.py  scan_custom_strategies_report.py  setup_trade_stress_strategy.py  strip_unsimulated_risk_params.py  sync_scanner_defaults_to_db.py  tag_fabricated_paper_closes.py  test_backtest.py  test_eth_engulfing.py  test_gates.py  trading_plane_smoke.py  trigger_paper_scan.py  verify_paper_vs_backtest.py  verify_subaccount_routing.py  watchdog.py
tests/: conftest.py  research_ext_utils.py  test_account_value_spot.py  test_agent_backtesting_tools.py  test_agent_brain_tools.py  test_agent_context.py  test_agent_family_guardrail.py  test_agent_identity_files.py  test_agent_model_keys.py  test_agent_provider_health.py  test_agent_recovery.py  test_agent_research_follow_through.py  test_agent_runner_trade_execution.py  test_agent_shell_normalization.py  test_agent_task_tool_ledger.py  test_agent_tool_routing.py  test_agent_toolsets.py  test_agent_visibility.py  test_ai_dropzone_intake.py  test_ai_dropzone_sessions.py  test_api_core_auth.py  (+393 more)
(+475 files in other folders)
