[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom"
version = "0.1.34"
description = "Algorithmic trading operations framework"
authors = [
    { name = "Salvatore Rossitto", email = "srossitto79@gmail.com" },
]
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
    "PyJWT>=2.8",
    "cryptography>=41.0",
    "croniter>=2.0",
    "filelock>=3.13",
    "chromadb>=0.5",
    "ruff>=0.4",
    "fastapi>=0.111.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
    "websockets>=13.0,<17",
    "slowapi>=0.1.9",
    "pyarrow>=16.0.0",
    # Upper bounds on the math-critical deps so a future major can't silently
    # break the numpy/pandas backtest engine on a fresh `pip install -e .`.
    "pandas>=2.0,<4",
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "requests>=2.31",
    "psutil>=5.9",
    "ccxt>=4.5.0",
    "hyperliquid-python-sdk>=0.22.0",
    "eth-account>=0.13.0",
    "scikit-learn>=1.5",
    "discord.py>=2.3",
    "duckdb>=1.1.0",
    "feedparser>=6.0",
    "trafilatura>=2.0",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2",
    "yt-dlp>=2025.1.0",
    "mcp>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3"]

[project.scripts]
axiom = "axiom.cli:cli"
axiom-agent = "axiom.agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["axiom*"]
exclude = [
    "packaging*",
    "frontend*",
    "tests*",
    "docs*",
    "data*",
    "scripts*",
    "research*",
]

[tool.setuptools.package-data]
"*" = ["../templates/workspace/*.md"]

[tool.ruff]
# Ruff configuration for axiom. Scoped minimally for now — the intent is to
# enforce project-wide bans on specific libraries, not general style rules.
extend-exclude = [
    # User-local AI-generated scratch that may not parse; gitignored anyway.
    "axiom/strategies/custom/_broken",
]

[tool.ruff.lint]
# Bug-catching rules gate CI:
#   TID251 = banned-api (https://docs.astral.sh/ruff/rules/banned-api/)
#   F      = pyflakes — undefined names (F821, real NameErrors), unused imports,
#            redefinitions, malformed f-strings
#   E9     = syntax / IO errors
select = ["TID251", "F", "E9"]
# F841 (unused local variable) deferred: ~24 pre-existing cases remain, several
# in scanner.py where an unused computed value (risk_pct/leverage/canonical_meta)
# may signal a real logic bug worth a careful audit rather than a blind delete.
# Tracked as a follow-up; the high-value bug-catching rules above gate now.
ignore = ["F841"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"ta".msg = "The `ta` library is banned. It's unmaintained, was never a real dependency (see tests/test_no_ta_imports.py), and caused ~150 files of silent dead code. Use native pandas/numpy or the future axiom/strategies/indicators.py helper instead."
"ta.trend".msg = "The `ta` library is banned. Use native pandas/numpy for indicator computations."
"ta.momentum".msg = "The `ta` library is banned. Use native pandas/numpy for indicator computations."
"ta.volatility".msg = "The `ta` library is banned. Use native pandas/numpy for indicator computations."
"ta.volume".msg = "The `ta` library is banned. Use native pandas/numpy for indicator computations."

[tool.ruff.lint.per-file-ignores]
# This test file documents the ban by name and references the `ta` module in
# its prose + test logic; silencing the ruff rule for this one file.
"tests/test_no_ta_imports.py" = ["TID251"]

[tool.pytest.ini_options]
testpaths = ["tests"]
